# diversify

./: .env.example  .gitignore  LICENSE  README.md  asyncutils.py  config.ini.example  diversify.py  environment.yml  genetic.py  genetic2.py  interfacespfy.py  pyproject.toml  setup.py  splearn.py
csvfiles/: 12152882067_songs.csv  andreaskeete_songs.csv  belzedu_songs.csv  belzedufeatures.csv  belzedusaved.csv  biasusanfeatures.csv  brttrexpeita_songs.csv  gabrielfavoritefeatures.csv  gabrielplaylistsfeatures.csv  maxmyllercarvalhofeatures.csv  playlistfeatures.csv  songs_to_cluster.csv  vi_liraa_songs.csv
diversify/: asyncutils.py  constants.py  genetic.py  main.py  session.py  splearn.py  types.py  utils.py
diversify/tf/: clustering.py
docs/: redirect.html
docs/css/: landing-page.css  landing-page.min.css
test/: test_splearn.py
tests/: conftest.py  test_session.py  test_splearn.py
tf/: clustering.py  embedding.py
viz/: diversifytests.ipynb
